# sharaga

./: Makefile  MyMakeFile  MyMakeFile2  a.txt  base_functions.c  callgrind.out.2524  config.h  config.h.in~  config.status  configure  configure.ac  main.c  main_functions.c  products  test.c  test.txt  zxc.txt
autom4te.cache/: output.1  requests  traces.0  traces.1
src/: Makefile  Makefile.am  Makefile.in  functions.h
